--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -6,57 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".SearchResultsActivity">
 
-    <ImageView
-        android:id="@+id/busImage"
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        app:srcCompat="@drawable/bus1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-               />
-    <TextView
-        android:id="@+id/route"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/busImage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"/>
-    <TextView
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/route"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/allSeat"
-        android:textAlignment="center"
-        android:id="@+id/leftSeat"
-        android:text="Осталось мест:"/>
-    <TextView
-        android:layout_width="150dp"
-        android:layout_height="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/route"
-        app:layout_constraintStart_toEndOf="@id/leftSeat"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"
-        android:id="@+id/allSeat"
-        android:text="Всего мест:"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Отбытие"
-        app:layout_constraintTop_toBottomOf="@id/leftSeat"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/allSeat"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Прибытие"
-        app:layout_constraintTop_toBottomOf="@id/leftSeat"
-        app:layout_constraintStart_toEndOf="@id/leftSeat"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_height="match_parent"
+        android:id="@+id/listView"
+        android:orientation="horizontal"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
